--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <form action="" class="headerform">
             <label for="emailfield" style="color: white;">Email</label>
             <label for="epass" style="color: white;">Password</label><br>
-            <input type="email" id="emailfield">
+            <!-- <input type="email" id="emailfield"> -->
 
-            <input type="password" id="epass">&nbsp;&nbsp;
+            <!-- <input type="password" id="epass">&nbsp;&nbsp; -->
             <button id="logbutton">Log In</button> <br>
             <button id="forget">Forgotten account?</button>
         </form>
@@ -52,7 +52,7 @@
                         </tr>
                         <tr>
                             <td>New Password:</td>
-                            <td><input type="password"></td>
+                            <!-- <td><input type="password"></td> -->
                         </tr>
                         <tr>
                             <td>I am:</td>
